--- a/web/M2/style.css
+++ b/web/M2/style.css
@@ -62,11 +62,11 @@ textarea#descrizione{
 }
 
 .dispari {
-    background-color: #23fb38;
+    background-color: #88bea2;
 }
 
 .pari {
-    background-color: greenyellow;
+    background-color: #aed4da;
 }
 
 .column1 {
@@ -147,6 +147,8 @@ input[type=submit]:focus{
     visibility: hidden;
 }
 
+
+
 @media only screen and (min-width: 1024px){
    .sidebarright {
         float: right;
@@ -162,7 +164,7 @@ input[type=submit]:focus{
         position: fixed;
         float:left;
         width:20%;
-        padding-left:10px;
+        padding-right:10px;
     }
     
     .content {
@@ -193,7 +195,7 @@ input[type=submit]:focus{
         position: fixed;
         display:inline-block;
         float:left;
-        width:20%;
+        width:25%;
         padding-left:10px;
     }
     
@@ -203,24 +205,17 @@ input[type=submit]:focus{
      }
      
      .columstriple .content{
-         margin-left: 20%;
+         margin-left: 25%;
          padding-right: 10px;
      }
     
+     .sidebarleft ul,.sidebarleft ol{
+        position:relative;
+        left:-30px;
+    }
 }
 
 @media only screen and (max-width:480px){
-    
-    .sidebarright {
-        width: 20%;
-    }
-    
-    .sidebarleft {
-    }
-    
-    .sidebarleft_wrapper{
-        width:20%;
-    }
     
     .content {
         padding-bottom: 10px;
